--- a/NewsTagil/src/main/res/layout/activity_login.xml
+++ b/NewsTagil/src/main/res/layout/activity_login.xml
@@ -17,9 +17,9 @@
         android:ems="10"
         android:layout_above="@+id/editText1"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="16dp"
+        android:inputType="text">
 
-        <requestFocus />
     </EditText>
 
     <EditText
