--- a/NewsTagil/src/main/res/layout/activity_correspondence.xml
+++ b/NewsTagil/src/main/res/layout/activity_correspondence.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#ECE8E2"
@@ -14,26 +14,41 @@
             android:layout_centerHorizontal="true"
             android:id="@+id/include"/>
 
-    <include
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            layout="@layout/composite_correspondence_massage_input"
-            android:layout_below="@+id/include"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/include2"/>
+    <ScrollView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="348dp"
+                android:layout_below="@+id/include"
+                android:id="@+id/scrollView">
+        <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+                <include
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        layout="@layout/composite_correspondence_massage_input"
 
-    <include
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            layout="@layout/composite_correspondence_massage_output"
-            android:layout_below="@+id/include2"
-            android:layout_alignParentLeft="true"
-            android:layout_marginTop="19dp"/>
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/include2"/>
+
+                <include
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        layout="@layout/composite_correspondence_massage_output"
+                        android:layout_below="@+id/include2"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginTop="19dp"/>
+
+
+        </RelativeLayout>
+
+    </ScrollView>
 
     <include
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             layout="@layout/composite_correspondence_massage_textarea"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"/>
+            android:layout_alignBottom="@+id/scrollView"
+            android:layout_alignParentLeft="true"/>
+
 </RelativeLayout>
