--- a/NewsTagil/src/main/res/layout/activity_reg.xml
+++ b/NewsTagil/src/main/res/layout/activity_reg.xml
@@ -10,7 +10,7 @@
     tools:context=".MainActivity" >
 
     <Button
-        android:id="@+id/reg_button"
+        android:id="@+id/button_reg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
