--- a/NewsTagil/src/main/res/layout/activity_tape.xml
+++ b/NewsTagil/src/main/res/layout/activity_tape.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#ECE8E2"
@@ -15,26 +15,56 @@
 
 
     <ScrollView
-            android:layout_height="wrap_content"
+            android:layout_height="285dp"
             android:layout_width="fill_parent"
-            android:layout_below="@+id/tape_header">
-
-        <include
-                android:id="@+id/tape_content"
-                android:layout_width="wrap_content"
+            android:paddingBottom="10dp"
+            android:layout_below="@id/tape_header">
+        <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                layout="@layout/composite_tape_content" />
+                android:minHeight="330dp"
+                >
+
+                <include
+                    android:id="@+id/tape_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    layout="@layout/composite_tape_content" />
 
 
+
+
+
+                <include
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        layout="@layout/composite_tape_content"
+                        android:layout_below="@+id/tape_content"
+                        android:layout_centerHorizontal="true"
+                        android:id="@+id/include"/>
+
+                <include
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        layout="@layout/composite_tape_content_with_img"
+                        android:layout_below="@+id/include"
+                        android:layout_centerHorizontal="true"/>
+
+
+        </RelativeLayout>
 
     </ScrollView>
 
     <include
-        android:id="@+id/tape_first_nav"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        layout="@layout/composite_first_button_nav" />
+            android:id="@+id/tape_first_nav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            layout="@layout/composite_first_button_nav" />
+
+
+
+
 
 </RelativeLayout>
