--- a/NewsTagil/src/main/res/layout/composite_header.xml
+++ b/NewsTagil/src/main/res/layout/composite_header.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="#fff"
@@ -20,7 +20,7 @@
             android:orientation="horizontal" >
 
             <TextView
-                android:id="@+id/header_text1"
+                android:id="@+id/composite_header_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
@@ -29,7 +29,7 @@
                 android:textColor="#4D433A" />
 
             <TextView
-                android:id="@+id/header_"
+                android:id="@+id/composite_header_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -38,7 +38,7 @@
                 android:textColor="#4D433A" />
 
             <TextView
-                android:id="@+id/TextView01"
+                android:id="@+id/composite_header_ads"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -47,7 +47,7 @@
                 android:textColor="#4D433A" />
 
             <Button
-                android:id="@+id/button1"
+                android:id="@+id/composite_header_update"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
@@ -84,7 +84,7 @@
                     android:orientation="vertical" >
 
                     <TextView
-                        android:id="@+id/TextView04"
+                        android:id="@+id/composite_header_now"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -94,7 +94,7 @@
                         android:textSize="10dp" />
 
                    <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/composite_header_tomorrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -113,7 +113,7 @@
                 android:orientation="vertical" >
 
                 <EditText
-                    android:id="@+id/editText1"
+                    android:id="@+id/composite_header_search"
                     android:layout_width="150dp"
                     android:layout_height="20dp"
                     android:layout_marginTop="2dp"
