--- a/NewsTagil/src/main/res/layout/composite_massage_header.xml
+++ b/NewsTagil/src/main/res/layout/composite_massage_header.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="#fff"
@@ -21,7 +21,7 @@
 
 
             <TextView
-                android:id="@+id/dialogs_link"
+                android:id="@+id/composite_massage_header_dialogs_link"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
@@ -30,7 +30,7 @@
                 android:textColor="#4D433A" />
 
             <Button
-                android:id="@+id/ref_button"
+                android:id="@+id/composite_massage_header_ref_button"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
@@ -67,7 +67,7 @@
                     android:orientation="vertical" >
 
                     <TextView
-                        android:id="@+id/text_today"
+                        android:id="@+id/composite_massage_header_today"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -77,7 +77,7 @@
                         android:textSize="10dp" />
 
                    <TextView
-                    android:id="@+id/tomorrow"
+                    android:id="@+id/composite_massage_header_tomorrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -106,7 +106,7 @@
                     android:layout_gravity="left|center_vertical">
 
                 <Button
-                        android:id="@+id/second_header_back_button"
+                        android:id="@+id/composite_massage_header_back_button"
                         style="?android:attr/buttonStyleSmall"
                         android:layout_marginTop="5dp"
                         android:layout_marginLeft="1dp"
