--- a/NewsTagil/src/main/res/layout-large/activity_login.xml
+++ b/NewsTagil/src/main/res/layout-large/activity_login.xml
@@ -19,7 +19,6 @@
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/pass">
 
-        <requestFocus />
     </EditText>
 
     <EditText
@@ -30,10 +29,9 @@
         android:ems="10"
         android:textColor="#fff"
         android:inputType="textPassword"
-
-        android:layout_below="@+id/login"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"/>
+        android:layout_marginBottom="164dp"/>
 
     <Button
         android:id="@+id/reg"
