--- a/NewsTagil/src/main/res/layout-large/composite_header_ads.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_header_ads.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="90dp"
+            android:layout_height="130dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/setting_header_bg"
@@ -15,17 +15,17 @@
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="4dp"
                 android:orientation="horizontal" >
 
             <Button
                     android:id="@+id/header_ads_back_button"
                     style="?android:attr/buttonStyleSmall"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_width="25dp"
-                    android:layout_height="20dp"
+                    android:layout_width="42dp"
+                    android:layout_height="36dp"
                     android:background="@drawable/back_header_button"
                     android:text="" />
 
@@ -35,66 +35,63 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="15dp"
                     android:text="Объявления"
+                    android:textSize="22dp"
                     android:textColor="#4D433A" />
 
             <Button
                     style="?android:attr/buttonStyleSmall"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_width="38dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/first_header_button"
-                    android:layout_marginLeft="143dp"
+                    android:layout_marginLeft="220dp"
                     android:id="@+id/header_ads_button_update"/>
 
 
         </LinearLayout>
 
+
+
         <LinearLayout
-                android:layout_width="150dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical" >
+                android:layout_width="133dp"
+                android:layout_height="45dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_gravity="left|center_vertical">
+
+            <ImageView
+                    android:id="@+id/second_header_cloud"
+                    android:layout_width="46dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="2dp"
+                    android:src="@drawable/first_header_cloud" />
 
             <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" >
 
-                <ImageView
-                        android:id="@+id/second_header_cloud"
-                        android:layout_width="32dp"
-                        android:layout_height="25dp"
-                        android:layout_marginTop="2dp"
-                        android:src="@drawable/first_header_cloud" />
-
-                <LinearLayout
+                <TextView
+                        android:id="@+id/header_ads_text_today"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical" >
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="2dp"
+                        android:text="сейчас:"
+                        android:textColor="#FC8000"
+                        android:textSize="16dp" />
 
-                    <TextView
-                            android:id="@+id/header_ads_text_today"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="2dp"
-                            android:text="сейчас:"
-                            android:textColor="#FC8000"
-                            android:textSize="10dp" />
-
-                    <TextView
-                            android:id="@+id/header_ads_text_tomorrow"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="0dp"
-                            android:textSize="10dp"
-                            android:textColor="#fff"
-                            android:text="завтра:" />
-                </LinearLayout>
-
+                <TextView
+                        android:id="@+id/header_ads_text_tomorrow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="0dp"
+                        android:textSize="16dp"
+                        android:textColor="#fff"
+                        android:text="завтра:" />
             </LinearLayout>
 
         </LinearLayout>
