Headres and registration optimazed for all screen + login

--- a/NewsTagil/src/main/res/layout-large/activity_useful.xml
+++ b/NewsTagil/src/main/res/layout-large/activity_useful.xml
@@ -27,7 +27,7 @@
 
     <include
         android:id="@+id/tape_first_nav"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
