--- a/NewsTagil/src/main/res/layout-large/activity_instruction.xml
+++ b/NewsTagil/src/main/res/layout-large/activity_instruction.xml
@@ -72,7 +72,7 @@
     </ScrollView>
 
     <include
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             layout="@layout/composite_first_button_nav"
             android:layout_alignParentBottom="true"
