--- a/NewsTagil/src/main/res/layout-large/activity_login.xml
+++ b/NewsTagil/src/main/res/layout-large/activity_login.xml
@@ -11,38 +11,39 @@
 
     <EditText
         android:id="@+id/login"
-        android:layout_width="150dp"
-        android:layout_height="22dp"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
         android:background="@drawable/login_input_bg"
         android:ems="10"
         android:textColor="#fff"
         android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/pass">
+        android:layout_centerHorizontal="true">
 
     </EditText>
 
     <EditText
         android:id="@+id/pass"
-        android:layout_width="150dp"
-        android:layout_height="22dp"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
         android:background="@drawable/login_pass_bg"
         android:ems="10"
         android:textColor="#fff"
         android:inputType="textPassword"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/login"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="164dp"/>
+        android:layout_marginTop="22dp"/>
 
     <Button
         android:id="@+id/reg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/empty_bg"
-        android:textSize="14dp"
+        android:textSize="18dp"
         android:textColor="#ff474747"
         android:text="Зарегистрироваться"
-        android:layout_above="@+id/enter"
-        android:layout_centerHorizontal="true"/>
+        android:layout_below="@+id/pass"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="39dp"/>
 
     <Button
         android:id="@+id/enter"
@@ -52,9 +53,9 @@
         android:text="Войти"
         android:textColor="#ff474747"
         android:background="@drawable/empty_bg"
-        android:textSize="22dp"
-        android:layout_alignParentBottom="true"
+        android:textSize="30dp"
+        android:layout_below="@+id/reg"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"/>
+        android:layout_marginTop="13dp"/>
 
 </RelativeLayout>
