--- a/NewsTagil/src/main/res/layout-large/activity_reg.xml
+++ b/NewsTagil/src/main/res/layout-large/activity_reg.xml
@@ -16,13 +16,14 @@
         android:layout_marginTop="26dp"
         android:background="@drawable/empty_bg"
         android:text="Зарегистрироваться"
+        android:textSize="28dp"
         android:layout_below="@+id/reg_pass"
         android:layout_centerHorizontal="true"/>
 
     <EditText
         android:id="@+id/reg_pass"
-        android:layout_width="250dp"
-        android:layout_height="30dp"
+        android:layout_width="350dp"
+        android:layout_height="45dp"
         android:ems="10"
         android:background="@drawable/login_pass_bg"
         android:inputType="textPassword"
@@ -32,8 +33,8 @@
 
     <EditText
         android:id="@+id/reg_mail"
-        android:layout_width="250dp"
-        android:layout_height="30dp"
+        android:layout_width="350dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/reg_mail_bg"
         android:ems="10"
@@ -43,8 +44,8 @@
 
     <EditText
         android:id="@+id/reg_login"
-        android:layout_width="250dp"
-        android:layout_height="30dp"
+        android:layout_width="350dp"
+        android:layout_height="45dp"
         android:background="@drawable/login_input_bg"
         android:ems="10"
         android:inputType="textPersonName"
