--- a/NewsTagil/src/main/res/layout-large/composite_contact_content.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_contact_content.xml
@@ -10,7 +10,7 @@
     <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="#111">
+            android:background="#000">
 
             <RelativeLayout
                     android:layout_height="wrap_content"
@@ -27,8 +27,8 @@
                         android:id="@+id/linearLayout22">
 
                     <ImageView
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
                             android:layout_marginTop="10dp"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
@@ -39,7 +39,7 @@
                     <LinearLayout
                             android:orientation="vertical"
                             android:layout_width="fill_parent"
-                            android:layout_height="100dp"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal|top">
 
                         <TextView
@@ -47,7 +47,7 @@
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:textColor="#ff474747"
-                                android:textSize="16dp"
+                                android:textSize="26dp"
                                 android:text="Иван Бубуйло"
                                 android:id="@+id/composite_contact_content_name"/>
 
@@ -58,15 +58,17 @@
                                 android:layout_marginBottom="8dp"
                                 android:textAppearance="?android:attr/textAppearanceLarge"
                                 android:textColor="#ff474747"
-                                android:textSize="14dp"
+                                android:textSize="22dp"
                                 android:text="32 года. Нижний Тагил"
                                 android:id="@+id/composite_contact_content_info"/>
 
                         <Button
-                                android:layout_width="200dp"
-                                android:layout_height="26dp"
-                                android:textSize="14dp"
+                                android:layout_width="300dp"
+                                android:layout_height="36dp"
+                                android:textSize="22dp"
+                                android:layout_marginTop="12dp"
                                 android:text="Начать диалог"
+                                android:textColor="#ffccc9c3"
                                 android:background="@drawable/ads_button_bg"
                                 android:id="@+id/composite_contact_content_start_dialog"
                                 android:layout_gravity="left|center_vertical"/>
@@ -78,7 +80,7 @@
                 <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="fill_parent"
-                        android:layout_height="20dp"
+                        android:layout_height="32dp"
                         android:layout_below="@+id/linearLayout22"
                         android:layout_centerHorizontal="true"
                         android:background="#fffd8001"
@@ -90,7 +92,7 @@
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Все фотографии"
                             android:layout_marginTop="2dp"
-                            android:textSize="12dp"
+                            android:textSize="22dp"
                             android:textColor="#ff474747"
                             android:id="@+id/textView3"
                             android:layout_gravity="center"/>
@@ -100,7 +102,7 @@
                 <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="fill_parent"
-                        android:layout_height="80dp"
+                        android:layout_height="130dp"
                         android:background="@drawable/contact_ley_bg"
                         android:layout_below="@+id/linearLayout2"
                         android:layout_centerHorizontal="true"
@@ -115,14 +117,14 @@
 
                     <RelativeLayout
                             android:layout_width="fill_parent"
-                            android:layout_height="80dp"
+                            android:layout_height="120dp"
                             android:paddingTop="10dp">
 
                     <LinearLayout android:layout_width="wrap_content"
                                   android:layout_height="wrap_content">
                         <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
+                                android:layout_width="110dp"
+                                android:layout_height="110dp"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="0dp"
                                 android:background="@drawable/ads_button_bg"
@@ -130,8 +132,8 @@
                                 android:layout_gravity="left|center_vertical"/>
 
                         <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
+                                android:layout_width="110dp"
+                                android:layout_height="110dp"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="0dp"
                                 android:background="@drawable/ads_button_bg"
@@ -139,8 +141,8 @@
                                 android:layout_gravity="center"/>
 
                         <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
+                                android:layout_width="110dp"
+                                android:layout_height="110dp"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="0dp"
                                 android:background="@drawable/ads_button_bg"
@@ -148,8 +150,8 @@
                                 android:layout_gravity="center"/>
 
                         <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
+                                android:layout_width="110dp"
+                                android:layout_height="110dp"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="0dp"
                                 android:background="@drawable/ads_button_bg"
@@ -157,8 +159,8 @@
                                 android:layout_gravity="center"/>
 
                         <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
+                                android:layout_width="110dp"
+                                android:layout_height="110dp"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="0dp"
                                 android:background="@drawable/ads_button_bg"
@@ -166,8 +168,8 @@
                                 android:layout_gravity="center"/>
 
                         <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
+                                android:layout_width="110dp"
+                                android:layout_height="110dp"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="0dp"
                                 android:background="@drawable/ads_button_bg"
@@ -175,8 +177,8 @@
                                 android:layout_gravity="center"/>
 
                         <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
+                                android:layout_width="110dp"
+                                android:layout_height="110dp"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="0dp"
                                 android:background="@drawable/ads_button_bg"
@@ -184,8 +186,8 @@
                                 android:layout_gravity="center"/>
 
                         <ImageView
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
+                                android:layout_width="110dp"
+                                android:layout_height="110dp"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="0dp"
                                 android:background="@drawable/ads_button_bg"
@@ -204,7 +206,7 @@
                 <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="fill_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="60dp"
                         android:background="@drawable/contact_ley_bg"
                         android:layout_below="@+id/linearLayout3"
                         android:layout_centerHorizontal="true"
@@ -214,9 +216,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:layout_marginTop="12dp"
+                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
-                            android:textSize="12dp"
+                            android:textSize="20dp"
                             android:textColor="#fffd8001"
                             android:text="Ищу:"
                             android:id="@+id/composite_contact_content_seek"
@@ -226,7 +228,7 @@
                 <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="fill_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="60dp"
                         android:background="@drawable/contact_ley_bg"
                         android:layout_below="@+id/linearLayout4"
                         android:layout_centerHorizontal="true"
@@ -237,8 +239,8 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Цели знакомства:"
-                            android:layout_marginTop="12dp"
-                            android:textSize="12dp"
+                            android:layout_marginTop="16dp"
+                            android:textSize="20dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_for_znakomstv"
@@ -248,7 +250,7 @@
                 <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="fill_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="60dp"
                         android:background="@drawable/contact_ley_bg"
                         android:layout_below="@+id/linearLayout5"
                         android:layout_alignParentLeft="true"
@@ -259,8 +261,8 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Семейное положение:"
-                            android:textSize="12dp"
-                            android:layout_marginTop="12dp"
+                            android:textSize="20dp"
+                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_polojenie"
@@ -270,7 +272,7 @@
                 <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="fill_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="60dp"
                         android:background="@drawable/contact_ley_bg"
                         android:layout_below="@+id/linearLayout6"
                         android:layout_centerHorizontal="true"
@@ -281,8 +283,8 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Хобби:"
-                            android:textSize="12dp"
-                            android:layout_marginTop="12dp"
+                            android:textSize="20dp"
+                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_hobby"
@@ -292,7 +294,7 @@
                 <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="fill_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="60dp"
                         android:background="@drawable/contact_ley_bg"
                         android:layout_below="@+id/linearLayout7"
                         android:id="@+id/linearLayout8"
@@ -303,8 +305,8 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="Любимая музыка:"
-                            android:textSize="12dp"
-                            android:layout_marginTop="12dp"
+                            android:textSize="20dp"
+                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_music"
@@ -315,7 +317,7 @@
                         android:orientation="vertical"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:minHeight="40dp"
+                        android:minHeight="100dp"
                         android:background="@drawable/contact_ley_bg"
                         android:layout_below="@+id/linearLayout8"
                         android:layout_centerHorizontal="true">
@@ -325,8 +327,8 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:text="О себе:"
-                            android:textSize="12dp"
-                            android:layout_marginTop="12dp"
+                            android:textSize="22dp"
+                            android:layout_marginTop="16dp"
                             android:layout_marginLeft="10dp"
                             android:textColor="#fffd8001"
                             android:id="@+id/composite_contact_content_about"
