--- a/NewsTagil/src/main/res/layout-large/composite_header.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_header.xml
@@ -7,15 +7,15 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="130dp"
+        android:layout_height="200dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/first_header_bg"
         android:orientation="vertical" >
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="60dp"
             android:layout_marginTop="4dp"
             android:orientation="horizontal" >
 
@@ -24,7 +24,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="10dp"
+                android:layout_centerVertical="true"
+                android:textSize="21dp"
                 android:text="Главная"
                 android:textColor="#4D433A" />
 
@@ -32,37 +33,43 @@
                 android:id="@+id/composite_header_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginLeft="12dp"
+                android:textSize="21dp"
                 android:text="Знакомства"
-                android:textColor="#4D433A" />
+                android:textColor="#4D433A"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/composite_header_main"/>
 
             <TextView
                 android:id="@+id/composite_header_ads"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginLeft="12dp"
+                android:textSize="21dp"
                 android:text="Объявления"
-                android:textColor="#4D433A" />
+                android:textColor="#4D433A"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/composite_header_contact"/>
 
             <Button
                 android:id="@+id/composite_header_update"
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
+                android:layout_width="38dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="17dp"
-                android:background="@drawable/first_header_button" />
+                android:layout_marginRight="30dp"
+                android:background="@drawable/first_header_button"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="150dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical" >
+                android:layout_width="250dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -71,8 +78,8 @@
 
                 <ImageView
                     android:id="@+id/header_img_cloud"
-                    android:layout_width="32dp"
-                    android:layout_height="25dp"
+                    android:layout_width="46dp"
+                    android:layout_height="40dp"
                     android:layout_marginTop="2dp"
                     android:src="@drawable/first_header_cloud" />
 
@@ -80,7 +87,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical" >
 
                     <TextView
@@ -91,17 +98,17 @@
                         android:layout_marginTop="2dp"
                         android:text="сейчас:"
                         android:textColor="#FC8000"
-                        android:textSize="10dp" />
+                        android:textSize="16dp" />
 
                    <TextView
-                    android:id="@+id/composite_header_tomorrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="0dp"
-                    android:textSize="10dp"
-                    android:textColor="#fff"
-                    android:text="завтра:" /> 
+                        android:id="@+id/composite_header_tomorrow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="0dp"
+                        android:textSize="16dp"
+                        android:textColor="#fff"
+                        android:text="завтра:" />
                     
                 </LinearLayout>
 
@@ -114,9 +121,9 @@
 
                 <EditText
                     android:id="@+id/composite_header_search"
-                    android:layout_width="150dp"
-                    android:layout_height="20dp"
-                    android:layout_marginTop="2dp"
+                    android:layout_width="220dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="6dp"
                     android:background="@drawable/first_header_search" >
 
                     <requestFocus />
