--- a/NewsTagil/src/main/res/layout-large/composite_header_setting.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_header_setting.xml
@@ -7,25 +7,25 @@
 
     <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="90dp"
+            android:layout_height="130dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/setting_header_bg"
             android:orientation="vertical" >
 
-        <LinearLayout
+        <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="4dp"
                 android:orientation="horizontal" >
 
             <Button
                     android:id="@+id/header_setting_back_button"
                     style="?android:attr/buttonStyleSmall"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_width="25dp"
-                    android:layout_height="20dp"
+                    android:layout_width="42dp"
+                    android:layout_height="36dp"
                     android:background="@drawable/back_header_button"
                     android:text="" />
 
@@ -34,44 +34,46 @@
                     android:id="@+id/header_setting_link"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="5dp"
                     android:text="Настройки"
-                    android:textColor="#4D433A" />
+                    android:textColor="#4D433A"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="22dp"
+                    android:textSize="22dp"
+                    android:layout_toRightOf="@+id/header_setting_back_button"/>
 
             <Button
                     style="?android:attr/buttonStyleSmall"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_width="38dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="30dp"
                     android:background="@drawable/first_header_button"
-                    android:layout_marginLeft="150dp"
-                    android:id="@+id/header_setting_button_update"/>
+                    android:id="@+id/header_setting_button_update"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"/>
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
-                android:layout_width="150dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical" >
+                android:layout_width="133dp"
+                android:layout_height="45dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_gravity="left|center_vertical"  >
 
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
+
 
                 <ImageView
                         android:id="@+id/second_header_cloud"
-                        android:layout_width="32dp"
-                        android:layout_height="25dp"
+                        android:layout_width="46dp"
+                        android:layout_height="40dp"
                         android:layout_marginTop="2dp"
                         android:src="@drawable/first_header_cloud" />
 
                 <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="vertical" >
 
                     <TextView
@@ -82,7 +84,7 @@
                             android:layout_marginTop="2dp"
                             android:text="сейчас:"
                             android:textColor="#FC8000"
-                            android:textSize="10dp" />
+                            android:textSize="16dp" />
 
                     <TextView
                             android:id="@+id/header_setting_text_tomorrow"
@@ -90,12 +92,12 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:layout_marginTop="0dp"
-                            android:textSize="10dp"
+                            android:textSize="16dp"
                             android:textColor="#fff"
                             android:text="завтра:" />
                 </LinearLayout>
 
-            </LinearLayout>
+
 
         </LinearLayout>
 
