--- a/NewsTagil/src/main/res/layout-large/composite_massage_header.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_massage_header.xml
@@ -7,16 +7,16 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="111dp"
+        android:layout_height="160dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/massage_header_bg"
         android:orientation="vertical" >
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="4dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal" >
 
 
@@ -25,27 +25,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="9dp"
+                android:layout_marginTop="15dp"
                 android:text="Диалоги"
+                android:textSize="22dp"
                 android:textColor="#4D433A" />
 
             <Button
                 android:id="@+id/composite_massage_header_ref_button"
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_marginTop="11dp"
-                android:layout_marginLeft="217dp"
-                android:background="@drawable/first_header_button" />
+                android:layout_width="38dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/first_header_button"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="150dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical" >
+                android:layout_width="133dp"
+                android:layout_height="75dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="20dp"
+                android:orientation="vertical" >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -54,8 +57,8 @@
 
                 <ImageView
                     android:id="@+id/header_img_cloud"
-                    android:layout_width="32dp"
-                    android:layout_height="25dp"
+                    android:layout_width="46dp"
+                    android:layout_height="40dp"
                     android:layout_marginTop="2dp"
                     android:src="@drawable/first_header_cloud" />
 
@@ -63,7 +66,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical" >
 
                     <TextView
@@ -74,17 +77,17 @@
                         android:layout_marginTop="2dp"
                         android:text="сейчас:"
                         android:textColor="#FC8000"
-                        android:textSize="10dp" />
+                        android:textSize="16dp" />
 
                    <TextView
-                    android:id="@+id/composite_massage_header_tomorrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="0dp"
-                    android:textSize="10dp"
-                    android:textColor="#fff"
-                    android:text="завтра:" /> 
+                        android:id="@+id/composite_massage_header_tomorrow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="0dp"
+                        android:textSize="16dp"
+                        android:textColor="#fff"
+                        android:text="завтра:" />
                     
                 </LinearLayout>
 
@@ -101,17 +104,17 @@
 
             <LinearLayout
                     android:orientation="vertical"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="45dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical">
 
                 <Button
                         android:id="@+id/composite_massage_header_back_button"
                         style="?android:attr/buttonStyleSmall"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="3dp"
                         android:layout_marginLeft="1dp"
-                        android:layout_width="25dp"
-                        android:layout_height="20dp"
+                        android:layout_width="35dp"
+                        android:layout_height="30dp"
                         android:background="@drawable/back_header_button"
                         android:text="" />
 
