Нужны апк для Кирила.

--- a/NewsTagil/src/main/res/layout-large/composite_contact_content.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_contact_content.xml
@@ -110,9 +110,10 @@
 
         <HorizontalScrollView
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="130dp"
                 android:id="@+id/horizontalScrollView"
                 android:layout_centerVertical="true"
+
                 android:layout_alignLeft="@+id/imageView3">
 
                     <RelativeLayout
