--- a/NewsTagil/src/main/res/layout-large/composite_tape_content.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_tape_content.xml
@@ -11,6 +11,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true">
 
         <LinearLayout
