--- a/NewsTagil/src/main/res/layout-large/composite_tape_content_with_img.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_tape_content_with_img.xml
@@ -10,6 +10,7 @@
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true">
 
