--- a/NewsTagil/src/main/res/layout-large/composite_contact_content_goals.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_contact_content_goals.xml
@@ -184,6 +184,7 @@
             android:layout_width="140dp"
             android:layout_height="30dp"
             android:text="Сохранить"
+            android:textColor="#FD8001"
             android:background="@drawable/ads_button_bg"
             android:id="@+id/composite_header_contact_button_save"
             android:layout_below="@+id/linearLayout5"
