--- a/NewsTagil/src/main/res/layout-large/activity_tape.xml
+++ b/NewsTagil/src/main/res/layout-large/activity_tape.xml
@@ -15,7 +15,7 @@
 
 
     <ScrollView
-            android:layout_height="285dp"
+            android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:paddingBottom="10dp"
             android:layout_below="@id/tape_header">
