--- a/NewsTagil/src/main/res/layout-large/composite_correspondence_massage_output.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_correspondence_massage_output.xml
@@ -19,7 +19,8 @@
 
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="250dp"
+            android:layout_width="370dp"
+            android:layout_marginLeft="15dp"
             android:layout_height="wrap_content"
             android:background="@drawable/massage_bg"
             android:layout_gravity="center_horizontal|top"
@@ -40,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Рвломшв ш мырмм ымшг ыршмгр пм "
+                android:text="Рвломшв ш мырмм ымшг ыршмгр пмРвломшв ш мырмм ымшг ыршмгр пмРвломшв ш мырмм ымшг ыршмгр пм "
                 android:textColor="#ff474747"
                 android:id="@+id/composite_correspondence_massage"
                 android:layout_gravity="left|center_vertical"/>
