--- a/NewsTagil/src/main/res/layout-large/composite_my_ads_content.xml
+++ b/NewsTagil/src/main/res/layout-large/composite_my_ads_content.xml
@@ -9,15 +9,15 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/border_img"
-            android:paddingBottom="10dp"
+            android:paddingBottom="20dp"
             >
 
 
         <ImageView
-                android:layout_width="90dp"
+                android:layout_width="120dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_height="90dp"
+                android:layout_height="120dp"
                 android:background="@drawable/border_img"
                 android:id="@+id/my_ads_content_ava"
                 android:layout_gravity="center"/>
@@ -26,7 +26,7 @@
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="100dp"
+                android:layout_height="wrap_content"
                 android:paddingLeft="5dp"
                 android:layout_below="@+id/nav_buttons">
 
@@ -38,8 +38,8 @@
                     android:text="в Альфа-банк требуются кредитные
 специалисты."
                     android:textColor="#ff474747"
-                    android:textSize="11dp"
-                    android:layout_marginTop="10dp"
+                    android:textSize="20dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginLeft="10dp"
                     android:id="@+id/my_ads_content_text"/>
 
@@ -49,8 +49,9 @@
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="13.13.13"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
                     android:textColor="#fffd8001"
-                    android:textSize="11dp"
+                    android:textSize="16dp"
                     android:id="@+id/my_ads_content_date"
                     android:layout_gravity="left|center_vertical"/>
 
