--- a/NewsTagil/src/main/res/layout-xlarge/activity_tape.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/activity_tape.xml
@@ -14,29 +14,21 @@
         layout="@layout/composite_header" />
 
 
-    <ScrollView
+    <ru.news.tagil.MyScrollView
             android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:paddingBottom="10dp"
             android:id="@+id/news_headers_scroller"
             android:layout_below="@id/tape_header"
             android:layout_alignBottom="@id/tape_first_nav">
-
-
-        <RelativeLayout android:layout_width="fill_parent"
-                        android:layout_height="wrap_content">
-
-            <include
-                    android:id="@+id/tape_first_nav"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    layout="@layout/composite_tape_content" />
-
-
-        </RelativeLayout>
-    </ScrollView>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/news_headers_content_holder"
+                >
+        </LinearLayout>
+    </ru.news.tagil.MyScrollView>
 
     <include
             android:id="@+id/tape_first_nav"
