--- a/NewsTagil/src/main/res/layout-xlarge/activity_tape.xml
+++ b/NewsTagil/src/main/res/layout-xlarge/activity_tape.xml
@@ -14,7 +14,7 @@
         layout="@layout/composite_header" />
 
 
-    <ru.news.tagil.MyScrollView
+    <ru.news.tagil.utility.myScrollView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:paddingBottom="10dp"
@@ -28,7 +28,7 @@
                 android:id="@+id/news_headers_content_holder"
                 >
         </LinearLayout>
-    </ru.news.tagil.MyScrollView>
+    </ru.news.tagil.utility.myScrollView>
 
     <include
             android:id="@+id/tape_first_nav"
