--- a/NewsTagil/src/main/res/layout/activity_read_post.xml
+++ b/NewsTagil/src/main/res/layout/activity_read_post.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         layout="@layout/composite_header_second" />
     <ScrollView
-            android:id="read_post_scroller"
+            android:id="@+id/read_post_scroller"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/read_header">
