Для того что бы заработал composite_first_button  пришлось убрать include и поставит вместо него LinLay . И добавлять его программно (

--- a/NewsTagil/src/main/res/layout/activity_tape.xml
+++ b/NewsTagil/src/main/res/layout/activity_tape.xml
@@ -28,13 +28,12 @@
         </LinearLayout>
     </ru.news.tagil.utility.myScrollView>
 
-    <include
-
+    <LinearLayout
             android:id="@+id/tape_first_nav"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            layout="@layout/composite_first_button_nav" />
+            />
 
 </RelativeLayout>
