--- a/NewsTagil/src/main/res/layout-large/activity_tape.xml
+++ b/NewsTagil/src/main/res/layout-large/activity_tape.xml
@@ -30,13 +30,14 @@
         </LinearLayout>
     </ru.news.tagil.utility.myScrollView>
 
-    <include
+    <LinearLayout
+            android:orientation="vertical"
             android:id="@+id/tape_first_nav"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            layout="@layout/composite_first_button_nav" />
+            />
 
 
 
